...
            isError = value.isNotBlank() && error != null,
            supportingText = {
                Text(error ?: stringResource(R.string.report_area_selection_supporting_default))
            },
            trailingIcon = { ExposedDropdownMenuDefaults.TrailingIcon(expanded = expanded) },
            modifier = Modifier.menuAnchor()
                .testTag("input_report_gebietseinstufung").fillMaxWidth(),
        )
        ExposedDropdownMenu(expanded = expanded, onDismissRequest = { expanded = false }) {
            ReportArea.entries.forEach { area ->
                DropdownMenuItem(
                    text = {
                        Text(
...
